--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
   </head>
 <body>
-<link rel="stylesheet" href="styles.css">
+<link rel="stylesheet" href="index.css">
     <header>
         <div class="logo">
             <img src="logo.jpg" alt="Raghuvanshi Healthcare">
