--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <link rel="stylesheet" href="index.css">
     <header>
         <div class="logo">
-            <img src="logo.jpg" alt="Raghuvanshi Healthcare">
+            <img src="images/logo.jpg" alt="Raghuvanshi Healthcare">
         </div>
         <nav class="nav-links">
             <a href="index.html">Home</a>
@@ -48,7 +48,7 @@
 
 <div class="healthcare-container">
   <div class="healthcare-image">
-    <img src="your-doctor-image.jpg" alt="Doctor Image" />
+    <img src="images/your-doctor-image.jpg" alt="Doctor Image" />
   </div>
   <div class="healthcare-content">
     <h2>
@@ -77,7 +77,7 @@
         <a href="book.html" class="action-btn">Book Now</a>
       </div>
       <div class="service-img">
-        <img src="trained-attendant.jpg" alt="Trained Attendants">
+        <img src="images/trained-attendant.jpg" alt="Trained Attendants">
       </div>
     </div>
 
@@ -87,7 +87,7 @@
         <a href="book.html" class="action-btn">Book Now</a>
       </div>
       <div class="service-img">
-        <img src="nursing-care.jpg" alt="Nursing Care">
+        <img src="images/nursing-care.jpg" alt="Nursing Care">
       </div>
     </div>
 
@@ -97,7 +97,7 @@
         <a href="book.html" class="action-btn">Book Now</a>
       </div>
       <div class="service-img">
-        <img src="physiotherapy.jpg" alt="Physiotherapy">
+        <img src="images/physiotherapy.jpg" alt="Physiotherapy">
       </div>
     </div>
 
@@ -107,7 +107,7 @@
         <a href="shop.html" class="action-btn">Buy Now</a>
       </div>
       <div class="service-img">
-        <img src="medical-equipment.jpg" alt="Medical Equipment">
+        <img src="images/medical-equipment.jpg" alt="Medical Equipment">
       </div>
     </div>
 
@@ -117,7 +117,7 @@
         <a href="book.html" class="action-btn">Book Now</a>
       </div>
       <div class="service-img">
-        <img src="critical-care.jpg" alt="Critical Care">
+        <img src="images/critical-care.jpg" alt="Critical Care">
       </div>
     </div>
   </div>
@@ -232,12 +232,12 @@
   <div class="swiper-container-wrapper">
     <div class="swiper">
       <div class="swiper-wrapper">
-        <div class="swiper-slide"><img src="https://via.placeholder.com/80x60?text=Logo+1" alt="Logo 1"></div>
-        <div class="swiper-slide"><img src="https://via.placeholder.com/80x60?text=Logo+2" alt="Logo 2"></div>
-        <div class="swiper-slide"><img src="https://via.placeholder.com/80x60?text=Logo+3" alt="Logo 3"></div>
-        <div class="swiper-slide"><img src="https://via.placeholder.com/80x60?text=Logo+4" alt="Logo 4"></div>
-        <div class="swiper-slide"><img src="https://via.placeholder.com/80x60?text=Logo+5" alt="Logo 5"></div>
-        <div class="swiper-slide"><img src="https://via.placeholder.com/80x60?text=Logo+6" alt="Logo 6"></div>
+        <div class="swiper-slide"><img src="images/partner1" alt="Logo 1"></div>
+        <div class="swiper-slide"><img src="images/partner2" alt="Logo 2"></div>
+        <div class="swiper-slide"><img src="images/partner3" alt="Logo 3"></div>
+        <div class="swiper-slide"><img src="images/partner4" alt="Logo 4"></div>
+        <div class="swiper-slide"><img src="images/partner5" alt="Logo 5"></div>
+        <div class="swiper-slide"><img src="images/partner6" alt="Logo 6"></div>
   
 </section>
 <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
@@ -320,7 +320,7 @@
 
     <section class="map-section">
     <div class="map-wrapper">
-      <img src="map-image.jpg" alt="India Map Coverage">
+      <img src="images/map-image.jpg" alt="India Map Coverage">
 
       <!-- Interactive markers -->
       <div class="marker delhi" data-city="Delhi"></div>
