--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <link rel="stylesheet" href="index.css">
     <header>
         <div class="logo">
-            <img src="images/logo.jpg" alt="Raghuvanshi Healthcare">
+            <img src="images/logo.png" alt="Raghuvanshi Healthcare">
         </div>
         <nav class="nav-links">
             <a href="index.html">Home</a>
