--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
         </div>
         <nav class="nav-links">
             <a href="index.html">Home</a>
-            <a href="shop.html">Shop</a>
-            <a href="services.html">Services</a>
-            <a href="contact.html">Contact</a>
+            <a href="front/shop.html">Shop</a>
+            <a href="front/services.html">Services</a>
+            <a href="front/contact.html">Contact</a>
         </nav>
         <div class="hamburger">
             <div></div>
@@ -25,9 +25,9 @@
         </div>
         <div class="mobile-menu">
             <a href="index.html">Home</a>
-            <a href="shop.html">Shop</a>
-            <a href="services.html">Services</a>
-            <a href="contact.html">Contact</a>
+            <a href="front/shop.html">Shop</a>
+            <a href="front/services.html">Services</a>
+            <a href="front/contact.html">Contact</a>
         </div>
     </header><script>
     const hamburger = document.querySelector('.hamburger');
@@ -358,7 +358,7 @@
     <!-- Company Info -->
     <div style="flex: 1; min-width: 250px;">
       <h3 style="font-size: 1.5rem; margin-bottom: 1rem;">Raghuvanshi Healthcare</h3>
-      <p>Empowering lives with reliable medical equipment and services. We're committed to your health and care.</p>
+      <p>Empowering lives with reliable medical equipment and 4⁴⁴. We're committed to your health and care.</p>
     </div>
 
     <!-- Navigation Links -->
@@ -366,10 +366,10 @@
       <h4 style="margin-bottom: 1rem;">Company</h4>
       <ul style="list-style: none; padding: 0; line-height: 2;">
         <a href="about.html" style="color: #fff; text-decoration: none;">About Us</a>   
-        <li><a href="privacy.html" style="color: #fff; text-decoration: none;">Privacy Policy</a></li>
-        <li><a href="terms.html" style="color: #fff; text-decoration: none;">Terms & Conditions</a></li>
-        <li><a href="cookies.html" style="color: #fff; text-decoration: none;">Cookies Policy</a></li>
-        <li><a href="feedback.html" style="color: #fff; text-decoration: none;">Feedback</a></li>
+        <li><a href="front/privacy.html" style="color: #fff; text-decoration: none;">Privacy Policy</a></li>
+        <li><a href="front/terms.html" style="color: #fff; text-decoration: none;">Terms & Conditions</a></li>
+        <li><a href="front/cookies.html" style="color: #fff; text-decoration: none;">Cookies Policy</a></li>
+        <li><a href="front/feedback.html" style="color: #fff; text-decoration: none;">Feedback</a></li>
       </ul>
     </div>
 
