--- a/terms.html
+++ b/terms.html
@@ -99,9 +99,9 @@
     <div class="logo">Raghuvanshi Healthcare</div>
     <nav>
       <a href="index.html">Home</a>
-      <a href="front/shop.html">Shop</a>
-      <a href="front/services.html">Services</a>
-      <a href="front/about.html">About Us</a>
+      <a href="shop.html">Shop</a>
+      <a href="services.html">Services</a>
+      <a href="about.html">About Us</a>
     </nav>
   </header>
 
@@ -118,7 +118,7 @@
     <p>Our services are provided by trained healthcare professionals. However, always consult your personal doctor for any serious medical concerns. We are not liable for delays in emergency care or outcomes resulting from your use of our services.</p>
 
     <h2>3. Appointments and Cancellations</h2>
-    <p>You agree to provide accurate information when booking appointments. Missed or late cancellations may be subject to a cancellation fee as per our <a href="#">policy</a>.</p>
+    <p>You agree to provide accurate information when booking appointments. Missed or late cancellations may be subject to a cancellation fee as per our <a href="privacy.html">policy</a>.</p>
 
     <h2>4. Intellectual Property</h2>
     <p>All content on our website, including medical articles, designs, and branding, is the property of Raghuvanshi Healthcare and cannot be reused without written permission.</p>
@@ -129,8 +129,8 @@
     <h2>6. Refund & Return Policies</h2>
     <p>We aim to ensure customer satisfaction. If you're not happy with a service or product, please refer to the following pages:</p>
     <ul>
-      <li><a href="front/refund.html" target="_blank">Refund Policy</a> – Details on refunds for canceled services or overpayments.</li>
-      <li><a href="front/return.html" target="_blank">Return Policy</a> – Information about return eligibility and process for any medical equipment/products.</li>
+      <li><a href="refund.html" target="_blank">Refund Policy</a> – Details on refunds for canceled services or overpayments.</li>
+      <li><a href="return.html" target="_blank">Return Policy</a> – Information about return eligibility and process for any medical equipment/products.</li>
     </ul>
 
     <h2>7. Limitation of Liability</h2>
@@ -161,11 +161,11 @@
     <div style="flex: 1; min-width: 200px;">
       <h4 style="margin-bottom: 1rem;">Company</h4>
       <ul style="list-style: none; padding: 0; line-height: 2;">
-        <li><a href="front/about.html" style="color: #fff; text-decoration: none;">About Us</a></li>
-        <li><a href="front/privacy.html" style="color: #fff; text-decoration: none;">Privacy Policy</a></li>
-        <li><a href="front/terms.html" style="color: #fff; text-decoration: none;">Terms & Conditions</a></li>
-        <li><a href="front/cookies.html" style="color: #fff; text-decoration: none;">Cookies Policy</a></li>
-        <li><a href="front/feedback.html" style="color: #fff; text-decoration: none;">Feedback</a></li>
+        <li><a href="about.html" style="color: #fff; text-decoration: none;">About Us</a></li>
+        <li><a href="privacy.html" style="color: #fff; text-decoration: none;">Privacy Policy</a></li>
+        <li><a href="terms.html" style="color: #fff; text-decoration: none;">Terms & Conditions</a></li>
+        <li><a href="cookies.html" style="color: #fff; text-decoration: none;">Cookies Policy</a></li>
+        <li><a href="feedback.html" style="color: #fff; text-decoration: none;">Feedback</a></li>
       </ul>
     </div>
 
