--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
         </div>
         <div class="mobile-menu">
             <a href="index.html">Home</a>
-            <a href="front/shop.html">Shop</a>
-            <a href="front/services.html">Services</a>
-            <a href="front/contact.html">Contact</a>
+            <a href="shop.html">Shop</a>
+            <a href="services.html">Services</a>
+            <a href="contact.html">Contact</a>
         </div>
     </header><script>
     const hamburger = document.querySelector('.hamburger');
@@ -366,10 +366,10 @@
       <h4 style="margin-bottom: 1rem;">Company</h4>
       <ul style="list-style: none; padding: 0; line-height: 2;">
         <a href="about.html" style="color: #fff; text-decoration: none;">About Us</a>   
-        <li><a href="front/privacy.html" style="color: #fff; text-decoration: none;">Privacy Policy</a></li>
-        <li><a href="front/terms.html" style="color: #fff; text-decoration: none;">Terms & Conditions</a></li>
-        <li><a href="front/cookies.html" style="color: #fff; text-decoration: none;">Cookies Policy</a></li>
-        <li><a href="front/feedback.html" style="color: #fff; text-decoration: none;">Feedback</a></li>
+        <li><a href="privacy.html" style="color: #fff; text-decoration: none;">Privacy Policy</a></li>
+        <li><a href="terms.html" style="color: #fff; text-decoration: none;">Terms & Conditions</a></li>
+        <li><a href="cookies.html" style="color: #fff; text-decoration: none;">Cookies Policy</a></li>
+        <li><a href="feedback.html" style="color: #fff; text-decoration: none;">Feedback</a></li>
       </ul>
     </div>
 
