--- a/index.html
+++ b/index.html
@@ -358,7 +358,7 @@
     <!-- Company Info -->
     <div style="flex: 1; min-width: 250px;">
       <h3 style="font-size: 1.5rem; margin-bottom: 1rem;">Raghuvanshi Healthcare</h3>
-      <p>Empowering lives with reliable medical equipment and 4⁴⁴. We're committed to your health and care.</p>
+      <p>Empowering lives with reliable medical equipment and Services. We're committed to your health and care.</p>
     </div>
 
     <!-- Navigation Links -->
