--- a/index.html
+++ b/index.html
@@ -365,7 +365,7 @@
     <div style="flex: 1; min-width: 200px;">
       <h4 style="margin-bottom: 1rem;">Company</h4>
       <ul style="list-style: none; padding: 0; line-height: 2;">
-        <a href="about.html" style="color: #fff; text-decoration: none;">About Us</a>   
+        <li></li><a href="about.html" style="color: #fff; text-decoration: none;">About Us</a></li>
         <li><a href="privacy.html" style="color: #fff; text-decoration: none;">Privacy Policy</a></li>
         <li><a href="terms.html" style="color: #fff; text-decoration: none;">Terms & Conditions</a></li>
         <li><a href="cookies.html" style="color: #fff; text-decoration: none;">Cookies Policy</a></li>
