--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
         </div>
         <nav class="nav-links">
             <a href="index.html">Home</a>
-            <a href="front/shop.html">Shop</a>
-            <a href="front/services.html">Services</a>
-            <a href="front/contact.html">Contact</a>
+            <a href="shop.html">Shop</a>
+            <a href="services.html">Services</a>
+            <a href="contact.html">Contact</a>
         </nav>
         <div class="hamburger">
             <div></div>
