--- a/contact.html
+++ b/contact.html
@@ -125,6 +125,7 @@
         <li>Describe your issue or inquiry clearly and professionally.</li>
         <li>Do not send spam or repeated messages.</li>
         <li>We typically respond within 24–48 hours.</li>
+        <li>If you want us to call you back send your number also with message.</li>
       </ul>
     </div>
 
