--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <a href="index.html">Home</a>
             <a href="shop.html">Shop</a>
             <a href="services.html">Services</a>
-            <a href="contact.html">Contact</a>
+            <a href="login.html">login/signup</a>
         </nav>
         <div class="hamburger">
             <div></div>
@@ -27,7 +27,7 @@
             <a href="index.html">Home</a>
             <a href="shop.html">Shop</a>
             <a href="services.html">Services</a>
-            <a href="contact.html">Contact</a>
+            <a href="login.html">login/sigunp</a>
         </div>
     </header><script>
     const hamburger = document.querySelector('.hamburger');
