--- a/login.html
+++ b/login.html
@@ -163,13 +163,13 @@
 
           setTimeout(() => {
             if (role === "admin") {
-              window.location.href = "/admin-dashboard.html";
+              window.location.href = "admin-dashboard.html";
             } else if (role === "doctor") {
-              window.location.href = "/doctor-dashboard.html";
+              window.location.href = "doctor-dashboard.html";
             } else if (role === "merchant") {
-              window.location.href = "/merchant-dashboard.html";
+              window.location.href = "merchant-dashboard.html";
             } else {
-              window.location.href = "/user-dashboard.html";
+              window.location.href = "user-dashboard.html";
             }
           }, 1000);
         } else {
