--- a/admin-dashboard.html
+++ b/admin-dashboard.html
@@ -96,7 +96,7 @@
   <div class="sidebar">
     <h2>Admin Panel</h2>
     <a href="dashboard.html" onclick="loadSection('dashboard')">📊 Dashboard</a>
-    <a href="services.html" onclick="loadSection('services')">🛠️ Manage Services</a>
+    <a href="services-dash.html" onclick="loadSection('services')">🛠️ Manage Services</a>
     <a href="#" onclick="loadSection('products')">🛒 Manage Products</a>
     <a href="#" onclick="loadSection('users')">👤 Manage Users</a>
     <a href="#" onclick="loadSection('analytics')">📈 Analytics</a>
