--- a/services-dash.html
+++ b/services-dash.html
@@ -7,13 +7,16 @@
   <style>
     * {
       box-sizing: border-box;
+      margin: 0;
+      padding: 0;
+      transition: all 0.3s ease;
     }
     body {
       font-family: 'Segoe UI', sans-serif;
       background: #f3f4f6;
+      color: #333;
       margin: 0;
       padding: 0;
-      color: #1f2937;
     }
     .container {
       max-width: 1000px;
@@ -23,103 +26,179 @@
     h1 {
       text-align: center;
       margin-bottom: 20px;
+      color: #2563eb;
+      font-size: 36px;
+      animation: fadeIn 1.5s ease-out;
     }
     form {
       background: #ffffff;
-      padding: 20px;
+      padding: 30px;
       border-radius: 12px;
-      box-shadow: 0 4px 12px rgba(0,0,0,0.05);
+      box-shadow: 0 4px 16px rgba(0, 0, 0, 0.1);
       margin-bottom: 30px;
+      animation: slideInFromLeft 0.5s ease-out;
     }
     input, textarea {
       width: 100%;
-      padding: 12px;
+      padding: 15px;
       margin-top: 10px;
-      margin-bottom: 16px;
+      margin-bottom: 20px;
       border: 1px solid #ccc;
       border-radius: 8px;
+      font-size: 16px;
+      outline: none;
+      background-color: #f9fafb;
+      transition: all 0.3s ease;
+    }
+    input:focus, textarea:focus {
+      border-color: #2563eb;
+      box-shadow: 0 0 8px rgba(37, 99, 235, 0.3);
+    }
+    input::placeholder, textarea::placeholder {
+      color: #aaa;
+      font-size: 16px;
+      transition: color 0.3s ease;
+    }
+    input:focus::placeholder, textarea:focus::placeholder {
+      color: #2563eb;
     }
     button {
-      padding: 10px 20px;
+      padding: 12px 24px;
       background: #2563eb;
       color: #fff;
       border: none;
       border-radius: 8px;
       cursor: pointer;
-      margin-top: 10px;
+      font-size: 16px;
+      transition: background 0.3s ease;
     }
     button:hover {
       background: #1d4ed8;
     }
-    .preview, .services-list {
+    .preview {
       margin-top: 30px;
+      opacity: 0;
+      animation: fadeIn 1.5s ease-in forwards;
     }
     .card {
       background: #fff;
       border-radius: 12px;
-      padding: 16px;
+      padding: 20px;
       margin-bottom: 20px;
-      box-shadow: 0 2px 12px rgba(0,0,0,0.05);
+      box-shadow: 0 2px 12px rgba(0, 0, 0, 0.1);
+      transition: transform 0.3s ease, box-shadow 0.3s ease;
+      cursor: pointer;
+    }
+    .card:hover {
+      transform: translateY(-5px);
+      box-shadow: 0 6px 20px rgba(0, 0, 0, 0.1);
     }
     .card img {
       width: 100%;
       height: 200px;
       object-fit: cover;
       border-radius: 8px;
-      margin-bottom: 10px;
+      margin-bottom: 15px;
+      transition: transform 0.3s ease;
+    }
+    .card:hover img {
+      transform: scale(1.05);
     }
     .card h3 {
-      margin: 0;
-      font-size: 20px;
+      font-size: 22px;
+      color: #333;
+      margin-bottom: 10px;
+      font-weight: 600;
     }
     .card p {
-      margin: 6px 0;
+      margin: 5px 0;
+      font-size: 16px;
+      color: #555;
     }
     .card-actions {
       margin-top: 10px;
       display: flex;
       gap: 10px;
     }
+    .edit-btn, .delete-btn {
+      padding: 8px 16px;
+      font-size: 14px;
+      border-radius: 6px;
+      cursor: pointer;
+      transition: background 0.3s ease, transform 0.3s ease;
+    }
     .edit-btn {
       background-color: #f59e0b;
+      color: #fff;
+    }
+    .edit-btn:hover {
+      background-color: #eab308;
+      transform: scale(1.05);
     }
     .delete-btn {
       background-color: #dc2626;
+      color: #fff;
     }
-
+    .delete-btn:hover {
+      background-color: #f87171;
+      transform: scale(1.05);
+    }
+    @keyframes fadeIn {
+      0% {
+        opacity: 0;
+      }
+      100% {
+        opacity: 1;
+      }
+    }
+    @keyframes slideInFromLeft {
+      0% {
+        transform: translateX(-100%);
+      }
+      100% {
+        transform: translateX(0);
+      }
+    }
     @media (max-width: 768px) {
       .card img {
         height: 150px;
       }
+      h1 {
+        font-size: 28px;
+      }
     }
-
     @media (max-width: 500px) {
       h1 {
         font-size: 22px;
+      }
+      form {
+        padding: 20px;
       }
     }
   </style>
 </head>
 <body>
   <div class="container">
-    <h1>Admin Panel - Services</h1>
+    <h1>Admin Panel - Manage Services</h1>
 
     <form id="serviceForm">
       <input type="text" id="title" placeholder="Service Title" required />
       <textarea id="description" placeholder="Service Description" required></textarea>
       <input type="number" id="price" placeholder="Price (₹)" required />
       <input type="url" id="imageUrl" placeholder="Image URL" required />
+      <input type="text" id="category" placeholder="Category (e.g. Dental, Lab)" required />
       <input type="number" id="rating" placeholder="Rating (0-5)" min="0" max="5" step="0.1" required />
       <input type="number" id="slots" placeholder="Available Slots" min="1" required />
       <button type="submit">Save Service</button>
     </form>
 
-    <div class="preview" id="preview" style="display:none;">
+    <div class="preview" id="preview">
       <h3>Live Preview</h3>
       <div class="card">
         <img id="previewImg" />
         <h3 id="previewTitle"></h3>
         <p id="previewDescription"></p>
+        <p id="previewCategory"></p>
         <p id="previewPrice"></p>
         <p id="previewRating"></p>
         <p id="previewSlots"></p>
@@ -159,6 +238,7 @@
     const previewImg = document.getElementById("previewImg");
     const previewTitle = document.getElementById("previewTitle");
     const previewDescription = document.getElementById("previewDescription");
+    const previewCategory = document.getElementById("previewCategory");
     const previewPrice = document.getElementById("previewPrice");
     const previewRating = document.getElementById("previewRating");
     const previewSlots = document.getElementById("previewSlots");
@@ -169,6 +249,7 @@
       description: document.getElementById("description"),
       price: document.getElementById("price"),
       imageUrl: document.getElementById("imageUrl"),
+      category: document.getElementById("category"),
       rating: document.getElementById("rating"),
       slots: document.getElementById("slots")
     };
@@ -184,6 +265,7 @@
       previewImg.src = inputs.imageUrl.value;
       previewTitle.textContent = inputs.title.value;
       previewDescription.textContent = inputs.description.value;
+      previewCategory.textContent = `Category: ${inputs.category.value}`;
       previewPrice.textContent = `₹${inputs.price.value}`;
       previewRating.textContent = `⭐ ${inputs.rating.value}/5`;
       previewSlots.textContent = `Slots: ${inputs.slots.value}`;
@@ -204,6 +286,7 @@
           <img src="${data.imageUrl}" />
           <h3>${data.title}</h3>
           <p>${data.description}</p>
+          <p>Category: ${data.category}</p>
           <p>₹${data.price}</p>
           <p>⭐ ${data.rating}/5</p>
           <p>Slots: ${data.slots}</p>
@@ -252,6 +335,7 @@
           description: inputs.description.value,
           price: parseFloat(inputs.price.value),
           imageUrl: inputs.imageUrl.value,
+          category: inputs.category.value,
           rating: parseFloat(inputs.rating.value),
           slots: parseInt(inputs.slots.value),
           createdAt: serverTimestamp()
