--- a/services-dash.html
+++ b/services-dash.html
@@ -1,364 +1,255 @@
-<!DOCTYPE html>
-<html lang="en">
+<!DOCTYPE html><html lang="en">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Admin - Manage Services</title>
+  <title>Add Service - Raghuvanshi Health Care</title>
   <style>
-    * {
-      box-sizing: border-box;
-      margin: 0;
-      padding: 0;
-      transition: all 0.3s ease;
-    }
     body {
-      font-family: 'Segoe UI', sans-serif;
-      background: #f3f4f6;
-      color: #333;
       margin: 0;
-      padding: 0;
-    }
-    .container {
-      max-width: 1000px;
-      margin: auto;
-      padding: 20px;
-    }
-    h1 {
-      text-align: center;
-      margin-bottom: 20px;
-      color: #2563eb;
-      font-size: 36px;
-      animation: fadeIn 1.5s ease-out;
-    }
-    form {
-      background: #ffffff;
-      padding: 30px;
-      border-radius: 12px;
-      box-shadow: 0 4px 16px rgba(0, 0, 0, 0.1);
-      margin-bottom: 30px;
-      animation: slideInFromLeft 0.5s ease-out;
-    }
-    input, textarea {
-      width: 100%;
-      padding: 15px;
-      margin-top: 10px;
-      margin-bottom: 20px;
-      border: 1px solid #ccc;
-      border-radius: 8px;
-      font-size: 16px;
-      outline: none;
-      background-color: #f9fafb;
-      transition: all 0.3s ease;
-    }
-    input:focus, textarea:focus {
-      border-color: #2563eb;
-      box-shadow: 0 0 8px rgba(37, 99, 235, 0.3);
-    }
-    input::placeholder, textarea::placeholder {
-      color: #aaa;
-      font-size: 16px;
-      transition: color 0.3s ease;
-    }
-    input:focus::placeholder, textarea:focus::placeholder {
-      color: #2563eb;
-    }
-    button {
-      padding: 12px 24px;
-      background: #2563eb;
-      color: #fff;
-      border: none;
-      border-radius: 8px;
-      cursor: pointer;
-      font-size: 16px;
-      transition: background 0.3s ease;
-    }
-    button:hover {
-      background: #1d4ed8;
-    }
-    .preview {
-      margin-top: 30px;
-      opacity: 0;
-      animation: fadeIn 1.5s ease-in forwards;
-    }
-    .card {
-      background: #fff;
-      border-radius: 12px;
-      padding: 20px;
-      margin-bottom: 20px;
-      box-shadow: 0 2px 12px rgba(0, 0, 0, 0.1);
-      transition: transform 0.3s ease, box-shadow 0.3s ease;
-      cursor: pointer;
-    }
-    .card:hover {
-      transform: translateY(-5px);
-      box-shadow: 0 6px 20px rgba(0, 0, 0, 0.1);
-    }
-    .card img {
-      width: 100%;
-      height: 200px;
-      object-fit: cover;
-      border-radius: 8px;
-      margin-bottom: 15px;
-      transition: transform 0.3s ease;
-    }
-    .card:hover img {
-      transform: scale(1.05);
-    }
-    .card h3 {
-      font-size: 22px;
-      color: #333;
-      margin-bottom: 10px;
-      font-weight: 600;
-    }
-    .card p {
-      margin: 5px 0;
-      font-size: 16px;
-      color: #555;
-    }
-    .card-actions {
-      margin-top: 10px;
+      font-family: "Segoe UI", sans-serif;
+      background: #f4f9f9;
+      padding: 2rem;
       display: flex;
-      gap: 10px;
-    }
-    .edit-btn, .delete-btn {
-      padding: 8px 16px;
-      font-size: 14px;
-      border-radius: 6px;
-      cursor: pointer;
-      transition: background 0.3s ease, transform 0.3s ease;
-    }
-    .edit-btn {
-      background-color: #f59e0b;
-      color: #fff;
-    }
-    .edit-btn:hover {
-      background-color: #eab308;
-      transform: scale(1.05);
-    }
-    .delete-btn {
-      background-color: #dc2626;
-      color: #fff;
-    }
-    .delete-btn:hover {
-      background-color: #f87171;
-      transform: scale(1.05);
-    }
-    @keyframes fadeIn {
-      0% {
-        opacity: 0;
-      }
-      100% {
-        opacity: 1;
-      }
-    }
-    @keyframes slideInFromLeft {
-      0% {
-        transform: translateX(-100%);
-      }
-      100% {
-        transform: translateX(0);
-      }
-    }
-    @media (max-width: 768px) {
-      .card img {
-        height: 150px;
-      }
-      h1 {
-        font-size: 28px;
-      }
-    }
-    @media (max-width: 500px) {
-      h1 {
-        font-size: 22px;
-      }
-      form {
-        padding: 20px;
-      }
-    }
+      flex-direction: column;
+      align-items: center;
+    }.container {
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+  max-width: 1200px;
+  width: 100%;
+}
+
+@media(min-width: 768px) {
+  .container {
+    flex-direction: row;
+  }
+}
+
+.form-container, .preview {
+  background: white;
+  border-radius: 16px;
+  padding: 1.5rem;
+  flex: 1;
+  box-shadow: 0 0 25px rgba(0, 0, 0, 0.08);
+}
+
+h2, h3 {
+  color: #00796b;
+  text-align: center;
+  margin-bottom: 1rem;
+}
+
+.form-group {
+  margin-bottom: 1rem;
+}
+
+label {
+  font-weight: bold;
+  display: block;
+  margin-bottom: 0.4rem;
+}
+
+input, textarea, select {
+  width: 100%;
+  padding: 0.75rem;
+  border: 1px solid #ccc;
+  border-radius: 10px;
+  font-size: 1rem;
+}
+
+button {
+  background-color: #00796b;
+  color: white;
+  padding: 0.8rem;
+  font-weight: bold;
+  border: none;
+  border-radius: 10px;
+  width: 100%;
+  cursor: pointer;
+  margin-top: 1rem;
+  font-size: 1rem;
+  transition: 0.3s;
+}
+
+button:hover {
+  background-color: #004d40;
+}
+
+#previewImage {
+  width: 100%;
+  border-radius: 12px;
+  margin-bottom: 1rem;
+  display: none;
+}
+
+.preview-content p {
+  margin: 0.5rem 0;
+}
+
+.tags {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 0.5rem;
+  margin-top: 0.5rem;
+}
+
+.tag {
+  background-color: #e0f2f1;
+  padding: 0.4rem 0.75rem;
+  border-radius: 30px;
+  font-size: 0.85rem;
+  color: #00796b;
+  font-weight: bold;
+}
+
   </style>
-</head>
-<body>
-  <div class="container">
-    <h1>Admin Panel - Manage Services</h1>
-
-    <form id="serviceForm">
-      <input type="text" id="title" placeholder="Service Title" required />
-      <textarea id="description" placeholder="Service Description" required></textarea>
-      <input type="number" id="price" placeholder="Price (₹)" required />
-      <input type="url" id="imageUrl" placeholder="Image URL" required />
-      <input type="text" id="category" placeholder="Category (e.g. Dental, Lab)" required />
-      <input type="number" id="rating" placeholder="Rating (0-5)" min="0" max="5" step="0.1" required />
-      <input type="number" id="slots" placeholder="Available Slots" min="1" required />
-      <button type="submit">Save Service</button>
-    </form>
-
-    <div class="preview" id="preview">
-      <h3>Live Preview</h3>
-      <div class="card">
-        <img id="previewImg" />
-        <h3 id="previewTitle"></h3>
-        <p id="previewDescription"></p>
-        <p id="previewCategory"></p>
-        <p id="previewPrice"></p>
-        <p id="previewRating"></p>
-        <p id="previewSlots"></p>
-      </div>
-    </div>
-
-    <div class="services-list">
-      <h3>All Services</h3>
-      <div id="servicesContainer"></div>
-    </div>
-  </div>
-
   <script type="module">
     import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-app.js";
-    import { getAuth, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-auth.js";
-    import {
-      getFirestore, collection, addDoc, getDocs, deleteDoc,
-      doc, updateDoc, serverTimestamp, getDoc
-    } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-firestore.js";
+    import { getFirestore, collection, addDoc } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-firestore.js";
+    import { getStorage, ref, uploadBytes, getDownloadURL } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-storage.js";const firebaseConfig = {
+  apiKey: "AIzaSyAbknkfD6Je1a3wDZRTzn6lC62CNUhhwLc",
+  authDomain: "store-471f1.firebaseapp.com",
+  projectId: "store-471f1",
+  storageBucket: "store-471f1.appspot.com",
+  messagingSenderId: "619523242611",
+  appId: "1:619523242611:web:fdfa53044c62f844574806",
+  measurementId: "G-16C8MYT70G"
+};
 
-    const firebaseConfig = {
-      apiKey: "AIzaSyAbknkfD6Je1a3wDZRTzn6lC62CNUhhwLc",
-      authDomain: "store-471f1.firebaseapp.com",
-      projectId: "store-471f1",
-      storageBucket: "store-471f1.appspot.com",
-      messagingSenderId: "619523242611",
-      appId: "1:619523242611:web:fdfa53044c62f844574806",
-      measurementId: "G-16C8MYT70G"
-    };
+const app = initializeApp(firebaseConfig);
+const db = getFirestore(app);
+const storage = getStorage(app);
 
-    const app = initializeApp(firebaseConfig);
-    const auth = getAuth(app);
-    const db = getFirestore(app);
+const form = document.getElementById('serviceForm');
+form.addEventListener('submit', async (e) => {
+  e.preventDefault();
 
-    const form = document.getElementById("serviceForm");
-    const preview = document.getElementById("preview");
-    const previewImg = document.getElementById("previewImg");
-    const previewTitle = document.getElementById("previewTitle");
-    const previewDescription = document.getElementById("previewDescription");
-    const previewCategory = document.getElementById("previewCategory");
-    const previewPrice = document.getElementById("previewPrice");
-    const previewRating = document.getElementById("previewRating");
-    const previewSlots = document.getElementById("previewSlots");
-    const servicesContainer = document.getElementById("servicesContainer");
+  const title = document.getElementById('title').value;
+  const price = parseFloat(document.getElementById('price').value);
+  const description = document.getElementById('description').value;
+  const category = document.getElementById('category').value;
+  const duration = document.getElementById('duration').value;
+  const gender = document.getElementById('providerGender').value;
+  const rating = parseFloat(document.getElementById('rating').value || 0);
+  const imageFile = document.getElementById('imageFile').files[0];
 
-    const inputs = {
-      title: document.getElementById("title"),
-      description: document.getElementById("description"),
-      price: document.getElementById("price"),
-      imageUrl: document.getElementById("imageUrl"),
-      category: document.getElementById("category"),
-      rating: document.getElementById("rating"),
-      slots: document.getElementById("slots")
-    };
+  if (!imageFile) {
+    alert("Please select an image file.");
+    return;
+  }
 
-    const checkAdmin = async (uid) => {
-      const ref = doc(db, "users", uid);
-      const userDoc = await getDoc(ref);
-      return userDoc.exists() && userDoc.data().role === "admin";
-    };
+  const imageRef = ref(storage, `services/${Date.now()}_${imageFile.name}`);
+  await uploadBytes(imageRef, imageFile);
+  const imageUrl = await getDownloadURL(imageRef);
 
-    const updatePreview = () => {
-      preview.style.display = "block";
-      previewImg.src = inputs.imageUrl.value;
-      previewTitle.textContent = inputs.title.value;
-      previewDescription.textContent = inputs.description.value;
-      previewCategory.textContent = `Category: ${inputs.category.value}`;
-      previewPrice.textContent = `₹${inputs.price.value}`;
-      previewRating.textContent = `⭐ ${inputs.rating.value}/5`;
-      previewSlots.textContent = `Slots: ${inputs.slots.value}`;
-    };
+  await addDoc(collection(db, 'services'), {
+    title,
+    price,
+    description,
+    category,
+    duration,
+    gender,
+    rating,
+    imageUrl,
+    createdAt: new Date()
+  });
 
-    Object.values(inputs).forEach(el => el.addEventListener("input", updatePreview));
+  alert("✅ Service added successfully!");
+  form.reset();
+  document.getElementById('previewImage').style.display = 'none';
+  document.getElementById('previewTags').innerHTML = '';
+});
 
-    let editId = null;
-
-    const loadServices = async () => {
-      servicesContainer.innerHTML = "";
-      const snapshot = await getDocs(collection(db, "services"));
-      snapshot.forEach(docSnap => {
-        const data = docSnap.data();
-        const div = document.createElement("div");
-        div.className = "card";
-        div.innerHTML = `
-          <img src="${data.imageUrl}" />
-          <h3>${data.title}</h3>
-          <p>${data.description}</p>
-          <p>Category: ${data.category}</p>
-          <p>₹${data.price}</p>
-          <p>⭐ ${data.rating}/5</p>
-          <p>Slots: ${data.slots}</p>
-          <div class="card-actions">
-            <button class="edit-btn" data-id="${docSnap.id}">Edit</button>
-            <button class="delete-btn" data-id="${docSnap.id}">Delete</button>
-          </div>
-        `;
-        servicesContainer.appendChild(div);
-      });
-
-      document.querySelectorAll(".edit-btn").forEach(btn =>
-        btn.onclick = async () => {
-          const id = btn.getAttribute("data-id");
-          const docRef = doc(db, "services", id);
-          const snap = await getDoc(docRef);
-          const data = snap.data();
-          Object.entries(inputs).forEach(([key, el]) => el.value = data[key]);
-          updatePreview();
-          editId = id;
-        }
-      );
-
-      document.querySelectorAll(".delete-btn").forEach(btn =>
-        btn.onclick = async () => {
-          if (confirm("Are you sure?")) {
-            await deleteDoc(doc(db, "services", btn.getAttribute("data-id")));
-            loadServices();
-          }
-        }
-      );
-    };
-
-    onAuthStateChanged(auth, async (user) => {
-      if (!user || !(await checkAdmin(user.uid))) {
-        alert("Admin access only.");
-        return;
-      }
-
-      loadServices();
-
-      form.onsubmit = async (e) => {
-        e.preventDefault();
-        const data = {
-          title: inputs.title.value,
-          description: inputs.description.value,
-          price: parseFloat(inputs.price.value),
-          imageUrl: inputs.imageUrl.value,
-          category: inputs.category.value,
-          rating: parseFloat(inputs.rating.value),
-          slots: parseInt(inputs.slots.value),
-          createdAt: serverTimestamp()
-        };
-
-        try {
-          if (editId) {
-            await updateDoc(doc(db, "services", editId), data);
-            alert("Service updated!");
-          } else {
-            await addDoc(collection(db, "services"), data);
-            alert("Service added!");
-          }
-          form.reset();
-          preview.style.display = "none";
-          editId = null;
-          loadServices();
-        } catch (err) {
-          console.error(err);
-          alert("Error saving service.");
-        }
-      };
-    });
   </script>
-</body>
+</head>
+<body>  <div class="container">
+    <div class="form-container">
+      <h2>Add New Service</h2>
+      <form id="serviceForm">
+        <div class="form-group">
+          <label for="title">Service Title</label>
+          <input type="text" id="title" required />
+        </div>
+        <div class="form-group">
+          <label for="price">Price (₹)</label>
+          <input type="number" id="price" required />
+        </div>
+        <div class="form-group">
+          <label for="description">Description</label>
+          <textarea id="description" rows="3" required></textarea>
+        </div>
+        <div class="form-group">
+          <label for="category">Category</label>
+          <input type="text" id="category" required />
+        </div>
+        <div class="form-group">
+          <label for="duration">Service Duration (optional)</label>
+          <input type="text" id="duration" placeholder="e.g. 30 mins" />
+        </div>
+        <div class="form-group">
+          <label for="providerGender">Service Provider Gender (optional)</label>
+          <select id="providerGender">
+            <option value="">Select</option>
+            <option value="male">👨 Male</option>
+            <option value="female">👩 Female</option>
+            <option value="any">👥 Any</option>
+          </select>
+        </div>
+        <div class="form-group">
+          <label for="rating">Rating (optional)</label>
+          <input type="number" id="rating" min="0" max="5" step="0.1" placeholder="0-5" />
+        </div>
+        <div class="form-group">
+          <label for="imageFile">Service Image</label>
+          <input type="file" id="imageFile" accept="image/*" required />
+        </div>
+        <button type="submit">Add Service</button>
+      </form>
+    </div><div class="preview">
+  <h3>Live Preview</h3>
+  <img id="previewImage" />
+  <div class="preview-content">
+    <p><strong>Title:</strong> <span id="previewTitle">-</span></p>
+    <p><strong>Price:</strong> ₹<span id="previewPrice">-</span></p>
+    <p><strong>Description:</strong> <span id="previewDescription">-</span></p>
+    <p><strong>Category:</strong> <span id="previewCategory">-</span></p>
+    <div class="tags" id="previewTags"></div>
+  </div>
+</div>
+
+  </div>  <script>
+    const previewImage = document.getElementById('previewImage');
+    const previewTitle = document.getElementById('previewTitle');
+    const previewPrice = document.getElementById('previewPrice');
+    const previewDescription = document.getElementById('previewDescription');
+    const previewCategory = document.getElementById('previewCategory');
+    const previewTags = document.getElementById('previewTags');
+
+    function updatePreview() {
+      previewTitle.textContent = document.getElementById('title').value;
+      previewPrice.textContent = document.getElementById('price').value;
+      previewDescription.textContent = document.getElementById('description').value;
+      previewCategory.textContent = document.getElementById('category').value;
+
+      previewTags.innerHTML = '';
+      const duration = document.getElementById('duration').value;
+      const gender = document.getElementById('providerGender').value;
+      const rating = document.getElementById('rating').value;
+
+      if (duration) previewTags.innerHTML += `<span class='tag'>⏱ ${duration}</span>`;
+      if (gender) previewTags.innerHTML += `<span class='tag'>${gender === 'male' ? '👨 Male' : gender === 'female' ? '👩 Female' : '👥 Any'}</span>`;
+      if (rating) previewTags.innerHTML += `<span class='tag'>⭐ ${rating}</span>`;
+    }
+
+    document.getElementById('serviceForm').addEventListener('input', updatePreview);
+
+    document.getElementById('imageFile').addEventListener('change', (e) => {
+      const file = e.target.files[0];
+      if (file) {
+        previewImage.src = URL.createObjectURL(file);
+        previewImage.style.display = 'block';
+      }
+    });
+  </script></body>
 </html>
